[workspace]
members = ["bindings/*", "mk-pass", "docs"]
resolver = "3"

[workspace.package]
description = "Generate a password comprehensively."
version = "0.1.3"
edition = "2024"
license = "MIT"
repository = "https://github.com/2bndy5/mk-pass"
authors = ["Brendan Doherty"]

[workspace.dependencies]
pyo3 = { version = "0.29.0", features = ["extension-module"] }

[profile.release]
lto = true

[profile.release.package.mk-pass-node]
strip = "symbols"
