[project]
name = "mk-pass-ws"
version = "0.0.0+private-virtual"
requires-python = ">=3.10"
dependencies = []
classifiers = ["Private :: Do Not Upload"]

[tool.uv.sources]
mk-pass = { workspace = true }
cli-gen = { workspace = true }

[tool.uv.workspace]
members = ["bindings/python", "docs"]

[dependency-groups]
docs = ["cli-gen"]
py = ["mk-pass[test]"]
dev = [
    "mypy==2.1.0",
    "pre-commit==4.6.0",
    "ruff==0.15.19",
    "types-pyyaml==6.0.12.20260518",
]

[tool.mypy]
files = [
    "bindings/python/tests",
    "bindings/python/mk_pass.pyi",
    "docs/scripts",
    "docs/cli_gen.pyi",
]
