[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "cli-gen"
description = "Generate mk-pass CLI doc from rust src."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Brendan Doherty", email = "2bndy5@gmail.com" },
]
classifiers = ["Private :: Do Not Upload"]
dynamic = ["version"]
dependencies = [
    "markdown-gfm-admonition==0.1.1",
    "mkdocs==1.6.1",
    "mkdocs-gen-files==0.5.0",
    "mkdocs-include-markdown-plugin==7.1.8",
    "mkdocs-material==9.6.15",
    "mkdocstrings>=0.30.0",
    "mkdocstrings-python==1.16.12",
    "pyyaml==6.0.2",
]
