[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "cli-gen"
description = "Generate mk-pass CLI doc from rust src."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Brendan Doherty", email = "2bndy5@gmail.com" },
]
classifiers = ["Private :: Do Not Upload"]
dynamic = ["version"]
dependencies = [
    "markdown-gfm-admonition==0.3.0",
    "mkdocs==1.6.1",
    "mkdocs-gen-files==0.6.0",
    "mkdocs-include-markdown-plugin==7.2.0",
    "mkdocs-material==9.6.15",
    "mkdocstrings-python==1.18.2",
    "pyyaml==6.0.3",
]
