[package]
name = "mk-pass"
description.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
clap = { version = "4.5.60", features = ["derive"], optional = true }
rand = "0.10.0"

[features]
clap = ["dep:clap"]
bin = ["clap"]

[[bin]]
name = "mk-pass"
path = "src/main.rs"
required-features = ["bin"]
