[package]
name = "mk-pass"
description.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
clap = { version = "4.6.1", features = ["derive"], optional = true }
rand = "0.10.1"

[features]
clap = ["dep:clap"]
bin = ["clap"]

[[bin]]
name = "mk-pass"
path = "src/main.rs"
required-features = ["bin"]

[target.wasm32-unknown-unknown.dependencies]
# spell-checker: disable-next-line
getrandom = { version = "0.4.2", features = ["wasm_js"] }
