# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "mk-pass-node"
description.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = "3.8.3"
napi-derive = "3.5.2"
mk-pass = { path = "../../mk-pass", features = ["clap"] }

[build-dependencies]
napi-build = "2.3.1"
